--- a/WorkTime.Web/Views/Projects/AddUserInProject.cshtml
+++ b/WorkTime.Web/Views/Projects/AddUserInProject.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WorkTime.Models.UserProject
 
 @{
-    ViewData["Title"] = "AddUserInProject";
+    ViewData["Title"] = "Добавление пользователя в проект";
 }
 
 <h1>Добавление пользователя в проект</h1>
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProjectId" value="@ViewBag.Project.Id" />
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Сотрудник</label>
                 <select asp-for="UserId" class="form-control">
                     @{
                         foreach (var user in ViewBag.Users)
@@ -25,12 +25,12 @@
                 </select>
             </div>
             <div class="form-group">
-                <label asp-for="HourlyWage" class="control-label"></label>
+                <label asp-for="HourlyWage" class="control-label">Ставка</label>
                 <input asp-for="HourlyWage" class="form-control" />
                 <span asp-validation-for="HourlyWage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmpTypeId" class="control-label"></label>
+                <label asp-for="EmpTypeId" class="control-label">Вид занятости</label>
                 <select asp-for="EmpTypeId" class="form-control">
                     @{
                         foreach (var type in ViewBag.EmpType)
@@ -41,14 +41,14 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ProjectDetails" asp-route-id="@ViewBag.Project.Id">Вернуться к проекту</a>
 </div>
 
 @section Scripts {
