--- a/WorkTime.Web/Views/Projects/Edit.cshtml
+++ b/WorkTime.Web/Views/Projects/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model WorkTime.Models.Project
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование проекта";
 }
 
-<h1>Edit</h1>
+<h1>Редактирование проекта</h1>
 
-<h4>Project</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,24 +13,33 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Название</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bonus" class="control-label"></label>
+                <label asp-for="Bonus" class="control-label">Бонус</label>
                 <input asp-for="Bonus" class="form-control" />
                 <span asp-validation-for="Bonus" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="StartDate" class="control-label">Дата начала</label>
+                <input type="date" asp-for="StartDate" class="form-control" />
+                <span asp-validation-for="StartDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndDate" class="control-label">Дата Окончания</label>
+                <input type="date" asp-for="EndDate" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
