--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -1,12 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
+@using WorkTime.Web.Services
+@inject UserInformation UserInfo
 
 @if (SignInManager.IsSignedIn(User))
 {
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <div style="margin-left: 0.75rem!important">
+            <div>
                 <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#sideBar" aria-expanded="false" aria-controls="sideBar">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
@@ -16,6 +18,22 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks" 
+                    asp-action="MyTasks" asp-route-id="@UserInfo.GetMyId()">
+                        <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Мои задачи</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices" 
+                    asp-action="MyInvoices" asp-route-id="@UserInfo.GetMyId()">
+                        <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Мои счета</span>
+                    </a>
+                    </li>
+                </ul>
+            </div>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     
