--- a/WorkTime.Web/Views/Tasks/Index.cshtml
+++ b/WorkTime.Web/Views/Tasks/Index.cshtml
@@ -28,26 +28,57 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaskName)
-            </td>
-            <td>
-                @UserInfo.GetName(item.PerformerId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaskStatus.Name)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr id="@item.Id">
+                <td>
+                    @Html.DisplayFor(modelItem => item.TaskName)
+                </td>
+                <td>
+                    @UserInfo.GetName(item.PerformerId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TaskStatus.Name)
+                </td>
+                <td>
                     @ProjectInfo.GetName(item.ProjectId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+                <td>
+                    <a type="button" title="Редактировать" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil"></i></a> |
+                    <a type="button" title="Информация о задаче" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-book"></i></a> |
+                    <a type="button" title="Удалить" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@section Scripts {
+    <script>
+
+
+        function deleteTask(id, name) {
+            if (confirm('Вы хотите удалить задачу ' + name + '?')) {
+
+                $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("DeleteConfirmed", "Projects")',
+                    data: {
+                        __RequestVerificationToken: gettoken(),
+                        id: id
+                    },
+                    success: function (result) {
+                        $('#' + id).remove();
+                    }
+                });
+            }
+        }
+
+        function gettoken() {
+            let token = '@Html.AntiForgeryToken()';
+            token = $(token).val();
+            return token;
+        }
+
+    </script>
+}
